Refactor ticket cleaning and exception handling logic.
Revised `TicketCleaner` to streamline methods and validation rules, ensuring modularity and clarity. Enhanced exception handling across controllers, adding specific checks for common errors and unexpected scenarios. Updated CSV export configuration with adjusted defaults for resolution and version fields.