@@ -4,9 +4,7 @@ import it.giordano.isw_project.model.Ticket;
 import it.giordano.isw_project.model.Version;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Objects;
 import java.util.logging.Logger;
@@ -15,12 +13,12 @@ import java.util.logging.Logger;
  * Utility class for cleaning and validating tickets.
  * This class provides methods to sanitize ticket data and remove invalid tickets.
  */
-public final class TicketCleaner {
+public class TicketCleaner {
 
     private static final Logger LOGGER = Logger.getLogger(TicketCleaner.class.getName());
 
     private TicketCleaner() {
-        // Private constructor to prevent instantiation
+        throw new IllegalStateException("Utility class");
     }
 
     /**
@@ -28,49 +26,19 @@ public final class TicketCleaner {
      * Tickets are modified in-place and invalid ones are removed from the list.
      *
      * @param tickets the list of tickets to clean
-     * @return the cleaned list of tickets
      */
-    public static List<Ticket> cleanTickets(List<Ticket> tickets) {
+    public static void cleanTargetTickets(List<Ticket> tickets) {
         if (tickets == null || tickets.isEmpty()) {
-            return Collections.emptyList();
+            return;
+        }
+        
+        for (Ticket ticket : tickets) {
+            multipleToSingleFixedVersions(ticket);
         }
 
-        // First pass: normalize ticket data
-        normalizeTickets(tickets);
+        //do proportion here
 
-        // Second pass: remove invalid tickets
         removeInvalidTickets(tickets);
-
-        return tickets;
-    }
-
-    /**
-     * Normalizes ticket data by applying various rules:
-     * - If multiple injected versions exist, keep only the oldest
-     * - If multiple opening versions exist, keep only the oldest
-     * - If multiple fixed versions exist, keep only the newest
-     * - Mark tickets with missing injected/affected versions for future work
-     *
-     * @param tickets the list of tickets to normalize
-     */
-    private static void normalizeTickets(List<Ticket> tickets) {
-        for (Ticket ticket : tickets) {
-            // Process multiple fixed versions - keep only the most recent one
-            if (ticket.getFixedVersions() != null && ticket.getFixedVersions().size() > 1) {
-                Version latestFixedVersion = findLatestVersion(ticket.getFixedVersions());
-                List<Version> singleFixedVersion = new ArrayList<>();
-                singleFixedVersion.add(latestFixedVersion);
-                ticket.getFixedVersions().clear();
-                ticket.getFixedVersions().addAll(singleFixedVersion);
-            }
-
-            // Check for missing injected or affected versions
-            if (ticket.getInjectedVersion() == null ||
-                    ticket.getAffectedVersions() == null ||
-                    ticket.getAffectedVersions().isEmpty()) {
-                LOGGER.info("Ticket " + ticket.getKey() +
-                        " needs future work with proportion calculation due to missing injected/affected versions");
-            }
 
             // If multiple injected versions (though this shouldn't happen based on model),
             // we would keep only the oldest one
@@ -79,6 +47,23 @@ public final class TicketCleaner {
             // If we had multiple opening versions, keep only the oldest one
             // Currently the model doesn't support multiple opening versions directly,
             // but this is a safeguard for future changes
+
+//        coldStart(needProportion, coldStartTickets); //20%
+//        incremental(needProportion); //80%
+//        setAffectedVersions(needProportion, projectVersions);
+//        tickets.addAll(needProportion);
+        
+
+    }
+
+    private static void multipleToSingleFixedVersions(Ticket ticket) {
+        // Process multiple fixed versions - keep only the most recent one
+        if (ticket.getFixedVersions() != null && ticket.getFixedVersions().size() > 1) {
+            Version latestFixedVersion = findLatestVersion(ticket.getFixedVersions());
+            List<Version> singleFixedVersion = new ArrayList<>();
+            singleFixedVersion.add(latestFixedVersion);
+            ticket.getFixedVersions().clear();
+            ticket.getFixedVersions().addAll(singleFixedVersion);
         }
     }
 
@@ -88,63 +73,82 @@ public final class TicketCleaner {
      * @param tickets the list of tickets to validate
      */
     private static void removeInvalidTickets(List<Ticket> tickets) {
-        Iterator<Ticket> iterator = tickets.iterator();
-        while (iterator.hasNext()) {
-            Ticket ticket = iterator.next();
+        tickets.removeIf(TicketCleaner::shouldRemoveTicket);
+    }
 
-            // Remove ticket if opening version is null or empty
-            if (ticket.getOpeningVersion() == null) {
-                iterator.remove();
-                LOGGER.info("Removed ticket " + ticket.getKey() + " due to missing opening version");
-                continue;
-            }
+    /**
+     * Determines if a ticket should be removed based on validation rules.
+     *
+     * @param ticket the ticket to validate
+     * @return true if the ticket should be removed, false otherwise
+     */
+    private static boolean shouldRemoveTicket(Ticket ticket) {
+        // Check for missing opening version
+        if (ticket.getOpeningVersion() == null) {
+            return true;
+        }
 
-            // Remove ticket if fixed version is null or empty
-            // Note: Fixed version info is also available in commits
-            if (ticket.getFixedVersions() == null || ticket.getFixedVersions().isEmpty()) {
-                iterator.remove();
-                LOGGER.info("Removed ticket " + ticket.getKey() +
-                        " due to missing fixed version (could be retrieved from commits)");
-                continue;
-            }
+        // Check for missing fixed versions
+        if (ticket.getFixedVersions() == null || ticket.getFixedVersions().isEmpty()) {
+            return true;
+        }
 
-            // Get fixed version (we already ensured there's only one after normalization)
-            Version fixedVersion = ticket.getFixedVersions().get(0);
+        // Get fixed version (we already ensured there's only one after normalization)
+        Version fixedVersion = ticket.getFixedVersions().getFirst();
 
-            // Remove if opening version > fixed version
-            if (isVersionNewer(ticket.getOpeningVersion(), fixedVersion)) {
-                iterator.remove();
-                LOGGER.info("Removed ticket " + ticket.getKey() +
-                        " because opening version is newer than fixed version");
-                continue;
-            }
+        // Check if opening version > fixed version
+        if (isVersionNewer(ticket.getOpeningVersion(), fixedVersion)) {
+            return true;
+        }
 
-            // Remove if fixed version <= any affected version
-            if (ticket.getAffectedVersions() != null && !ticket.getAffectedVersions().isEmpty()) {
-                boolean isFixedVersionOlderOrEqualToAnyAffected = false;
-                for (Version affectedVersion : ticket.getAffectedVersions()) {
-                    if (!isVersionNewer(fixedVersion, affectedVersion)) {
-                        isFixedVersionOlderOrEqualToAnyAffected = true;
-                        break;
-                    }
-                }
+        // Check for missing injected version AFTER proportion calculation
+        if (ticket.getInjectedVersion() == null) {
+            return true;
+        }
+        
+        // Check for missing affected versions AFTER proportion calculation
+        if (ticket.getAffectedVersions() == null || ticket.getAffectedVersions().isEmpty()) {
+            return true;
+        }
+        
+        // Check if fixed version <= any affected version
+        if (isFixedVersionInvalidWithAffected(ticket, fixedVersion)) {
+            return true;
+        }
 
-                if (isFixedVersionOlderOrEqualToAnyAffected) {
-                    iterator.remove();
-                    LOGGER.info("Removed ticket " + ticket.getKey() +
-                            " because fixed version is older than or equal to an affected version");
-                    continue;
-                }
-            }
+        // Check if injected version >= fixed version
+        if (ticket.getInjectedVersion() != null &&
+                isVersionNewer(ticket.getInjectedVersion(), fixedVersion)) {
+            return true;
+        }
+        
+        // Check if opening version < injected version
+        if ( isVersionNewer(ticket.getInjectedVersion(), ticket.getOpeningVersion()) ) {
+            return true;
+        }
 
-            // Remove if injected version >= fixed version
-            if (ticket.getInjectedVersion() != null &&
-                    isVersionNewer(ticket.getInjectedVersion(), fixedVersion)) {
-                iterator.remove();
-                LOGGER.info("Removed ticket " + ticket.getKey() +
-                        " because injected version is newer than fixed version");
+        return false;
+    }
+
+    /**
+     * Checks if the fixed version is invalid when compared with affected versions.
+     *
+     * @param ticket the ticket to check
+     * @param fixedVersion the fixed version to compare
+     * @return true if the ticket should be removed, false otherwise
+     */
+    private static boolean isFixedVersionInvalidWithAffected(Ticket ticket, Version fixedVersion) {
+        if (ticket.getAffectedVersions() == null || ticket.getAffectedVersions().isEmpty()) {
+            return false;
+        }
+
+        for (Version affectedVersion : ticket.getAffectedVersions()) {
+            if (!isVersionNewer(fixedVersion, affectedVersion)) {
+                return true;
             }
         }
+
+        return false;
     }
 
     /**
